# nexus

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
events/: admin.py  models.py  urls.py
events/api/: route.py  serializers.py  views.py
events/migrations/: 0001_initial.py
nexus/: settings.py  urls.py
user/: models.py  urls.py
user/api/: route.py  serializers.py  views.py
user/migrations/: 0001_initial.py
